# ramnet

./: .gitignore  CMakeLists.txt
client/: send_audio.py
include/common/: audio.h  server.h
src/: main.c
src/common/: audio.c  server.c
